# Haskell

./: README.md
haskell_for_great_good/: Car.hs  CharList.hs  Day.hs  Locker.hs  People.hs  Person.hs  Phone.hs  Shapes.hs  TrafficLight.hs  Tree.hs  Vector.hs  appendtodo  appendtodo.hs  arg-test  arg-test.hs  baabaa  baabaa.hs  baabaacaps  baabaacaps.hs  baby.hs  capslocker  capslocker.hs  deletetodo  deletetodo.hs  findOptimalPath.hs  helloworld  monad.hs  monoid.hs  newtype.hs  palindromes  palindromes.hs  putFile  putFile.hs  putName  putName.hs  quine.hs  reverse  reverse.hs  shortlines.txt  shortlinesonly  (+6 more)
haskell_introduction/: ch2.hs  main.hs  sample2.hs  sample3.hs
haskell_introduction/ch1/: sample1.hs
haskell_introduction/ch2/: fizz_buzz.hs  fns.hs  main.hs  toplevel.hs  where.hs
haskell_introduction/ch3/: adt.hs  (+1 more)
haskell_introduction/ch8/parallel-sample/: README.md  parallel-sample.cabal
haskell_introduction/ch8/parallel-sample/.stack-work/install/x86_64-osx/lts-12.5/8.4.3/flag-cache/: abstract-deque-0.3-GCdtOlin88h1rWmUqCNKd  abstract-par-0.3.3-Ie3MD7O3orK6ZR8i7FuBEv  cereal-0.5.5.0-1XCE4Uz2LbqDHkorQgs6Kt  math-functions-0.2.1.0-2NhhnlEtREo2bNP6Xf5UPa  monad-par-0.3.4.8-8ASXZ6K61fRKDSHuxdiGkk  monad-par-extras-0.3.3-8AK9OzsB9YHJ8jKygaDF0V  mwc-random-0.13.6.0-4NXbOCwhRx8FAcUq9jXe4F  parallel-3.2.2.0-E8M4t2NF24XDDNAVbYCukS  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  vector-0.12.0.1-4awQG9XUvVEBfJgKGHBhOb  vector-th-unbox-0.2.1.6-4zK7oCb71eH1479ZMEneUA
haskell_introduction/ch8/parallel-sample/src/: Main.hs
(+203 files in other folders)
